--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,34 @@
   <artifactId>bank-kata</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <build>
+<!--    <sourceDirectory>src</sourceDirectory> -->
     <plugins>
 	    <plugin>    
 	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>3.8.0</version>
 	        <configuration>
 	            <source>1.8</source>
 	            <target>1.8</target>
-	        </configuration>
+        	</configuration>
 	    </plugin>
+	    <plugin> 
+
+                <!-- Building an executable jar -->
+
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                  <archive>
+                    <manifest>
+
+                    <!-- give full qualified name of your main class-->
+                      <mainClass>org.bankkata.application.BankkataApplication</mainClass>
+
+                    </manifest>
+                  </archive>
+                </configuration>
+    </plugin>
         <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
